@@ -1,3 +1,11 @@
+Tue Feb 25 00:01:19 2009  Brent Roman  <brent@mbari.org>
+
+        * gc.c:  default GC.limit is now 2e6*sizeof(VALUE)
+        
+        * eval.c:  added RB_GC_GUARDs to eval_slit(), more volatile tweaks
+        
+        * version.h:  bumped date, MBARI version 7A --> 8A
+
 Tue Feb 24 00:01:19 2009  Brent Roman  <brent@mbari.org>
 
         * cofigure.in:  added --enable-mbari-api and --with-wipe-sites
